2004-04-30  Rodney Dawes  <dobey@ximian.com>

	* gui/alarm-notify/alarm-notify-dialog.c (alarm_notify_dialog):
	* gui/alarm-notify/alarm-notify.glade:
	Update the alarm notify dialog to be HIG compliant 

	Fixes #41224

2004-04-30  Gary Ekker  <gekker@novell.com>

	* gui/e-tasks.c: (e_tasks_init): Set up the model to use the correct
	query. Setup callbacks for gconf changes. Add an idle timeout to hide
	completed items.
	Add update_view, update_view_cb, and
	config_hide_completed_tasks_changed_cb to update the model view.

	* gui/gnome-cal.c: ditto

	* gui/calendar-config.h: Add notifications for hide_completed_tasks
	settings.

	* gui/calendar-config.c: ditto

2004-04-30  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.c (e_cal_view_objects_modified_cb): signal correctly
	the pre-changes on the ETableModel.

2004-04-30  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.c (search_instance): new function to search
	individual instances in the model.
	(e_cal_view_objects_modified_cb): use the above function.

2004-04-30  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.c (e_cal_view_objects_modified_cb): deal separately
	with master objects and recurring instances, so that notifications
	are sent correctly.

2004-04-30  Not Zed  <NotZed@Ximian.com>

	* gui/dialogs/meeting-page.c (get_widgets): make the entry
	non-editable.  Quick fix for #48132 (could convert to optionmenu
	but then we need to change again for gnome >?2.6).

2004-04-29  Rodney Dawes  <dobey@ximian.com>

	* gui/dialogs/cal-prefs-dialog.glade: Update the prefs dialog pages
	for the calendar and tasks components to be HIG compliant
                                                                               
2004-04-29  JP Rosevear  <jpr@ximian.com>

	* gui/tasks-component.h (tasks_component_peek_source_list): remove
	prototypes

	* gui/tasks-component.c (source_removed_cb):  unselect the
	source in the selector if source removed from calendar